<resources>
    <string name="app_name">MrHyde</string>

    <string name="title_repos">Repositories</string>
    <string name="title_preview">Preview</string>
    <string name="title_commit">Commit changes</string>
    <string name="title_select_repository">Select repository</string>

    <string name="login_button">Login with GitHub</string>
    <string name="login_title">Login</string>
    <string name="login_error_title">Access denied</string>
    <string name="login_error_message">Sorry, but it looks like username or password are incorrect.</string>

    <string name="welcome_text">Welcome to \n MrHyde</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="section_favourite_repositories">Favourite Repositories</string>
    <string name="section_all_repositories">All Repositories</string>
    <string name="section_settings">Settings</string>
    <string name="section_feedback">Feedback</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="action_move">Move to …</string>
    <string name="action_commit">Commit</string>
    <string name="action_preview">Preview</string>
    <string name="action_discard_changes">Discard changes</string>
    <string name="action_close">Close</string>
    <string name="action_show_line_numbers">Line numbers</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_publish_draft">Publish draft</string>
    <string name="action_unpublish_post">Unpublish post</string>

    <string name="select_destination_folder">Select destination folder</string>
    <string name="move">Move</string>
    <string name="file_moved">File moved</string>
    <string name="overwrite_file_title">Overwrite file</string>
    <string name="overwrite_file_message">"Overwrite existing file %1$s?"</string>
    <string name="overwrite_confirm">Overwrite</string>

    <string name="draft_published">Moved draft to posts</string>
    <string name="publish_draft_title">Publish draft?</string>
    <string name="publish_draft_message">Do you want to move this draft to %1$s?</string>
    <string name="post_unpublished">Moved post to drafts</string>
    <string name="unpublish_post_title">Unpublish post?</string>
    <string name="unpublish_post_message">Do you want to move this post to %1$s?</string>

    <string name="nothing_to_undo">Nothing to undo</string>
    <string name="nothing_to_redo">Nothing to redo</string>

    <string name="repos_last_update">Last pushed to on %1$s</string>
    <string name="never_pushed">Never pushed to</string>

    <plurals name="posts_count">
        <item quantity="zero">no posts</item>
        <item quantity="one">1 post</item>
        <item quantity="other">%d posts</item>
    </plurals>
    <plurals name="drafts_count">
        <item quantity="zero">no drafts</item>
        <item quantity="one">1 draft</item>
        <item quantity="other">%d drafts</item>
    </plurals>
    <string name="post_darft_count">%1$s &#8226; %2$s</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="new_post">New post</string>
    <string name="no_posts">No posts yet</string>
    <string name="drafts">Drafts</string>
    <string name="draft">Draft</string>
    <string name="new_draft">New draft</string>
    <string name="no_drafts">No drafts yet</string>
    <string name="all_files">All files</string>
    <string name="view_all_files">View all files</string>

    <string name="filename">Filename</string>
    <string name="your_awesome_title">Your awesome title</string>
    <string name="default_front_matter">---\nlayout: post\ntitle: %1$s\n---\n</string>

    <string name="file_new_title">File Name</string>
    <string name="file_new_message">NewFile</string>
    <string name="image_new_title">Image Name</string>
    <string name="image_new_message">NewImage.png</string>
    <string name="dir_new_title">Dir Name</string>
    <string name="dir_new_message">NewDir</string>
    <string name="dir_empty">Empty</string>
    <string name="rename_title">Rename</string>

    <string name="discard_changes_title">Discard changes</string>
    <string name="discard_changes_message">Undo all local changes to this repository? Cannot be undone!</string>

    <string name="delete_title">Delete file</string>
    <string name="delete_message">Do you want to delete %1$s?</string>

    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="folder">Folder</string>


    <string name="unmark_title">Unmark repository</string>
    <string name="unmark_message">Remove repository from favourites list?</string>
    <string name="favourites_empty">No favourite repositories yet</string>

    <string name="marked_toast">Repo added to favourites list</string>
    <string name="unmarked_toast">Repo removed from favourites list</string>

    <string name="save_title">Unsaved changes</string>
    <string name="save_message">Save changes made to this file?</string>
    <string name="save_ok">Save</string>
    <string name="save_cancel">Discard</string>

    <string name="commit_changed_files">%1$s changed files</string>
    <string name="commit_deleted">%1$s (deleted)</string>
    <string name="commit_git_diff">Git diff</string>
    <string name="commit_message">Commit Message</string>
    <string name="commit_message_default">Mr Hyde was here …</string>
    <string name="commit_action">Commit</string>
    <string name="commit_success">Commit success</string>

    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="about_msg">
        This app was developed as part of the Android Challenge: one app every month for one year
        (think of it as a New Year\'s resolution). MrHyde is our project for April.&lt;br/&gt;
        &lt;br/&gt;
        If you want to know more, be sure to check out our &lt;a href=&quot;http://faudroids.org&quot;&gt;website&lt;/a&gt;.
        This app is &lt;b&gt;open source&lt;/b&gt; and you can find everything on &lt;a href=&quot;https://github.com/FauDroids/MrHyde&quot;&gt;GitHub&lt;/a&gt;.&lt;br/&gt;
        &lt;br/&gt;
        We would love to hear from you! Send us an &lt;a href=&quot;mailto:ideas@faudroids.org&quot;&gt;email&lt;/a&gt; and let us know what you think!&lt;br/&gt;
        &lt;br/&gt;
        The developers are&lt;br/&gt;
        &lt;br/&gt;
        Philipp Eichhorn&lt;br/&gt;
        Simon Hofmann&lt;br/&gt;
        Julia Schottenhamml&lt;br/&gt;
        Richard Baumann&lt;br/&gt;
        &lt;br/&gt;
        Happy coding!
    </string>
    <string name="credits">Credits</string>
    <string name="credits_msg">
        This app is being powered by a number of small and large &lt;b&gt;open source projects&lt;/b&gt;,
        which all together have made this project happen. We couldn\'t have done this without them.
        To those fellow developers out there spending their part time creating those libraries:
        you guys are awesome, keep on rocking!&lt;br&gt;
        &lt;br&gt;
        The libraries in use are:&lt;br&gt;
        &lt;br&gt;
        &lt;a href=&quot;https://github.com/JakeWharton/timber&quot;&gt;Timber&lt;/a&gt; by Jake Wharton&lt;br&gt;
        &lt;a href=&quot;https://github.com/roboguice/roboguice&quot;&gt;RoboGuice&lt;/a&gt;&lt;br&gt;
        &lt;a href=&quot;https://github.com/neokree/GoogleNavigationDrawer&quot;&gt;GoogleNavigationDrawer&lt;/a&gt; by Neokree&lt;br&gt;
        &lt;a href=&quot;https://github.com/eclipse/jgit&quot;&gt;JGit Core&lt;/a&gt; by Eclipse&lt;br&gt;
        &lt;a href=&quot;https://github.com/eclipse/egit-github&quot;&gt;Eclipse EGit GitHub API Core&lt;/a&gt; by Eclipse&lt;br&gt;
        &lt;a href=&quot;https://github.com/square/retrofit&quot;&gt;Retrofit&lt;/a&gt; by Square&lt;br&gt;
        &lt;a href=&quot;https://github.com/square/picasso&quot;&gt;Picasso&lt;/a&gt; by Square&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxJava&quot;&gt;RxJava&lt;/a&gt; by Reactivex&lt;br&gt;
        &lt;a href=&quot;https://github.com/ReactiveX/RxAndroid&quot;&gt;RxAndroid&lt;/a&gt; by Reactivex&lt;br&gt;
        &lt;a href=&quot;https://github.com/futuresimple/android-floating-action-button&quot;&gt;Floating Action Button&lt;/a&gt; by futuresimple&lt;br&gt;
        &lt;a href=&quot;https://github.com/MikeOrtiz/TouchImageView&quot;&gt;Touch Image View&lt;/a&gt; by Mike Ortiz&lt;br&gt;
        &lt;a href=&quot;https://github.com/johncarl81/parceler&quot;&gt;Parceler&lt;/a&gt; by John Ericksen&lt;br&gt;
        &lt;a href=&quot;https://github.com/google/material-design-icons&quot;&gt;Material Design Icons&lt;/a&gt; by Google Inc.&lt;br&gt;
        &lt;a href=&quot;https://source.android.com/&quot;&gt;Android Open Source Project&lt;/a&gt; by Google Inc. and the Open Handset Alliance&lt;br&gt;
        &lt;br&gt;
        And of course we are using the awesome &lt;a href=&quot;https://developer.github.com/v3/&quot;&gt;GitHub API&lt;/a&gt;,
        probably the best platform for hosting and collaborating on open source projects out there.
        &lt;br&gt;
        &lt;br&gt;
        Thanks everyone!
    </string>
    <string name="logout">Logout</string>
    <string name="settings_quick_message">Made by a small team of night time coders in Erlangen, Germany\nThanks for your support!</string>

    <string name="feedback_mail_chooser">Thanks for the feedback!</string>
    <string name="feedback_mail_address"> ideas@faudroids.org</string>
    <string name="feedback_mail_subject">Feedback MrHyde</string>

    <string name="error_internal_title">That didn\'t work</string>
    <string name="error_internal_message">Ups, this is embarrassing. There was an internal error while processing your request, we are sorry!</string>
    <string name="error_internal_details">Details</string>
    <string name="error_network_title">No internet connection</string>
    <string name="error_network_message">Failed to perform request due to a problem with the internet connection</string>
    <string name="error_empty_repo_title">Empty repository</string>
    <string name="error_empty_repo_message">It seems that this repository is empty. Unfortunately we currently do not support empty repository, sorry.</string>

    <string name="help_got_it">Got it!</string>
    <string name="help_publish_draft_title">Publishing drafts</string>
    <string name="help_publish_draft_message">To move a draft to the post folder long click on it.</string>
</resources>
