<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SettingsTextEntry"
                    android:text="@string/version"
                    android:clickable="false"
                    />

                <TextView
                    android:id="@+id/versionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SettingsTextEntry"
                    android:layout_marginLeft="20dp"
                    android:clickable="false"
                    />


            </LinearLayout>

            <include layout="@layout/divider"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/authorTextView"
                android:text="@string/about"
                style="@style/SettingsTextEntry"
                />

            <include layout="@layout/divider"/>

            <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/creditsTextView"
            android:text="@string/credits"
            style="@style/SettingsTextEntry"
            />

            <include layout="@layout/divider"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/logoutTextView"
                android:text="@string/logout"
                style="@style/SettingsTextEntry"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>