<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/card_horizontal_margin"
                android:paddingRight="@dimen/card_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_vertical_margin"
                    android:layout_marginBottom="@dimen/card_vertical_margin_large"
                    android:background="@drawable/item_selector"
                    android:clickable="true"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:id="@+id/header_posts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:orientation="horizontal"
                            android:background="@color/colorPrimary"
                            >

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_arrow_forward"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="15dp"
                                android:text="@string/posts"
                                android:textColor="@android:color/white"
                                style="@style/TextExtraLarge"
                                />

                        </LinearLayout>

                        <org.faudroids.mrhyde.ui.ExpandedListView
                            android:id="@+id/list_posts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:divider="@color/gray_light_2"
                            />

                        <include layout="@layout/divider_cards" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:orientation="horizontal"
                            android:id="@+id/item_add_post"
                            >

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_add"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/new_post"
                                android:textColor="@color/gray"
                                android:layout_gravity="center"
                                android:layout_marginLeft="15dp"
                                style="@style/TextSecondary"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_vertical_margin"
                    android:layout_marginBottom="@dimen/card_vertical_margin_large"
                    android:background="@drawable/item_selector"
                    android:clickable="true"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:id="@+id/header_drafts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:orientation="horizontal"
                            android:background="@color/colorPrimary"
                            >

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_arrow_forward"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="15dp"
                                android:text="@string/drafts"
                                android:textColor="@android:color/white"
                                style="@style/TextExtraLarge"
                                />

                        </LinearLayout>

                        <org.faudroids.mrhyde.ui.ExpandedListView
                            android:id="@+id/list_drafts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:divider="@color/gray_light_2"
                            />

                        <include layout="@layout/divider_cards" />

                        <LinearLayout
                            android:id="@+id/item_add_draft"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:orientation="horizontal"
                            >

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_add"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/new_draft"
                                android:textColor="@color/gray"
                                android:layout_gravity="center"
                                android:layout_marginLeft="15dp"
                                style="@style/TextSecondary"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/card_all_files"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_vertical_margin_large"
                    android:layout_marginTop="@dimen/card_vertical_margin"
                    android:background="@drawable/item_selector"
                    android:clickable="true"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:padding="15dp"
                            >

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/ic_arrow_forward"
                                />

                            <TextView
                                style="@style/TextLarge"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="15dp"
                                android:text="@string/all_files"
                                android:textColor="@android:color/white"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="15dp"
                            >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/folder_gray"
                                />

                            <TextView
                                style="@style/TextSecondary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="15dp"
                                android:text="@string/view_all_files"
                                />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/spinner"/>

</RelativeLayout>
